--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "codeceptjs": "^3.1.2",
-    "compression-webpack-plugin": "^6.1.1",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "eslint": "^7.32.0",
@@ -40,6 +39,7 @@
     "puppeteer": "^10.2.0",
     "sharp": "^0.29.1",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
